Fix cropped social link icons in IE11

--- a/src/components/page/index.css
+++ b/src/components/page/index.css
@@ -193,6 +193,8 @@
 
   .Page--404 {
     display: flex;
+    flex-direction: column;
+    height: 100vh;
 
     & .Page-content {
       margin: auto;
@@ -211,11 +213,13 @@
     }
 
     & .Page-button {
-      margin:30px 0 0;
+      margin: 30px 0 0;
     }
 
     & .Page-footer {
-      left: 0;
+      /*left: 0;
+      bottom: 0;
+      margin: auto 0 0;*/
     }
   }
 }
