--- a/src/components/social/index.css
+++ b/src/components/social/index.css
@@ -15,6 +15,8 @@
 .Social-item {
   flex: 0 0 30px;
   height: 30px;
+  min-height: 30px;
+  min-width: 30px;
   padding: 10px;
   width: 30px;
 }
@@ -24,9 +26,11 @@
   display: block;
   font-size: 0;
   height: 100%;
+  height: 30px;
   text-decoration: none;
   text-indent: -1000px;
   width: 100%;
+  width: 30px;
 
   &:hover {
     color: white;
